<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="aac" translatable="false">AAC</string>

    <string name="app_name" translatable="false">FiiOK9Control</string>

    <string name="apply">Apply</string>

    <string name="aptx" translatable="false">aptX</string>
    <string name="aptx_adaptive" translatable="false">aptX-adaptive</string>
    <string name="aptx_hd" translatable="false">aptX-HD</string>
    <string name="aptx_ll" translatable="false">aptX-LL</string>

    <string name="audio">Audio</string>
    <string name="audio_fmt">Audio format: %s</string>

    <string name="bluetooth" translatable="false">Bluetooth</string>
    <string name="bluetooth_codecs">Bluetooth codecs</string>

    <string name="channel_balance">Channel balance</string>
    <string name="channel_balance_offset" translatable="false">%1$s%2$.1fdB</string>
    <string name="channel_balance_offset_direction">Offset: %1$.1f dB %2$s</string>

    <string name="choose_a_profile_name">Choose a profile name</string>

    <string name="classical">Classical</string>

    <string name="coaxial">Coaxial</string>

    <string name="connect_to_device">Connect to device\n%s</string>

    <string name="connection_abort">Abort connection</string>

    <string name="custom">Custom</string>
    <string name="custom_equalizer_preset">Custom equalizer preset</string>

    <string name="dance">Dance</string>

    <string name="delete">Delete</string>

    <string name="device_scan_abort">Abort device scan</string>
    <string name="device_scan_start">Start device scan</string>

    <string name="disabled">Disabled</string>

    <string name="disconnect">Disconnect</string>

    <string name="enable_bluetooth">Enable Bluetooth</string>

    <string name="enabled_default_behaviour">Enabled, default behaviour</string>
    <string name="enabled_multi_color_gradient_only">Enabled, multi-color gradient only</string>

    <string name="eq_offset">%.1fdB</string>
    <string name="eq_offset_125hz">125Hz: %.1fdB</string>
    <string name="eq_offset_16khz">16kHz: %.1fdB</string>
    <string name="eq_offset_1khz">1kHz: %.1fdB</string>
    <string name="eq_offset_250hz">250Hz: %.1fdB</string>
    <string name="eq_offset_2khz">2kHz: %.1fdB</string>
    <string name="eq_offset_31hz">31Hz: %.1fdB</string>
    <string name="eq_offset_4khz">4kHz: %.1fdB</string>
    <string name="eq_offset_500hz">500Hz: %.1fdB</string>
    <string name="eq_offset_62hz">62Hz: %.1fdB</string>
    <string name="eq_offset_8khz">8kHz: %.1fdB</string>

    <string name="equalizer">Equalizer</string>
    <string name="equalizer_preset">Equalizer preset</string>

    <string name="export_profile">Export profile</string>

    <string name="fiio_k9" translatable="false">FiiO K9 Pro</string>

    <string name="fw_version">Bluetooth firmware version: %s</string>

    <string name="gaia_discover">Discovering GAIA services</string>

    <string name="gatt_discover">Discovering GATT services</string>

    <string name="grant_permissions">Grant permissions</string>

    <string name="hp_pre_simultaneously">HP/Pre out simult.</string>

    <string name="indicator_brightness">Indicator brightness</string>
    <string name="indicator_brightness_value">%d%%</string>
    <string name="indicator_state">Indicator state</string>

    <string name="input_source">Input source</string>

    <string name="jazz">Jazz</string>

    <string name="ldac" translatable="false">LDAC</string>

    <string name="left">left</string>

    <string name="line_in">Line in</string>

    <string name="low_dispersion_short_delay">Low dispersion short delay</string>
    <string name="low_pass_filter">Low pass filter</string>

    <string name="mqa" translatable="false">MQA</string>

    <string name="off">Off</string>

    <string name="on">On</string>

    <string name="optical">Optical</string>

    <string name="pop">Pop</string>

    <string name="profile">Profiles</string>
    <string name="profile_apply_failure">Profile not applied</string>
    <string name="profile_apply_success">Profile applied</string>
    <string name="profile_delete_failure">Profile not deleted</string>
    <string name="profile_delete_success">Profile deleted</string>
    <string name="profile_export_failure">Profile not exported</string>
    <string name="profile_export_success">Profile exported</string>
    <string name="profile_name">Profile name</string>

    <string name="r_b"><![CDATA[R&B]]></string>

    <string name="reset_settings">Reset settings</string>

    <string name="restore_default">Restore defaults</string>

    <string name="right">right</string>

    <string name="rock">Rock</string>

    <string name="sharp_roll_off">Sharp roll-off</string>

    <string name="short_delay_sharp_roll_off">Short delay sharp roll-off</string>
    <string name="short_delay_slow_roll_off">Short delay slow roll-off</string>

    <string name="shortcut_profile_add_failure">Profile shortcut not added</string>
    <string name="shortcut_profile_add_success">Profile shortcut added</string>
    <string name="shortcut_profile_delete_failure">Profile shortcut not deleted</string>
    <string name="shortcut_profile_delete_success">Profile shortcut deleted</string>

    <string name="slow_roll_off">Slow roll-off</string>

    <string name="standby_mode">Standby mode</string>

    <string name="state">State</string>

    <string name="super_slow">Super slow</string>

    <string name="usb">USB</string>

    <string name="volume">Volume</string>
    <string name="volume_down">Volume down</string>
    <string name="volume_export">Export volume level</string>
    <string name="volume_level" tools:ignore="PluralsCandidate">%1$d equates to %2$d%%</string>
    <string name="volume_level_value">Volume level: %s</string>
    <string name="volume_mute">Mute</string>
    <string name="volume_step_size">Volume step size</string>
    <string name="volume_step_size_1">1</string>
    <string name="volume_step_size_2">2</string>
    <string name="volume_step_size_3">3</string>
    <string name="volume_step_size_4">4</string>
    <string name="volume_unmute">Unmute</string>
    <string name="volume_up">Volume Up</string>
</resources>
