<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?materialCardViewOutlinedStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/spacing_normal"
    app:shapeAppearance="@style/ShapeAppearance.Material3.LargeComponent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/spacing_normal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/indicator"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicator">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/disabled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disabled" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/enabled_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enabled_default_behaviour" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/enabled_gradient_only"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enabled_multi_color_gradient_only" />
        </RadioGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/indicator_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/indicator_brightness"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group" />

        <com.google.android.material.slider.Slider
            android:id="@+id/indicator_brightness_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/indicator_brightness" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
